--- a/.env
+++ b/.env
@@ -343,8 +343,8 @@ REDIRECT_URL=/                                     # Redirect URL
 
 # Stats
 STATS_ENABLED=true                                # Enable usage statistics (true|false)
-STATS_SRC=https://stats.mirotalk.com/script.js    # Stats script URL
-STATS_ID=41d26670-f275-45bb-af82-3ce91fe57756     # Stats tracking ID
+STATS_SRC=https://analytics.quillo.vip/script.js  # Stats script URL
+STATS_ID=1c4851cc-d38b-409b-8c53-44e97b4c35eb     # Stats tracking ID
 
 # ----------------------------------------------------
 # 10. Mediasoup Configuration
